Serial Timings Update - Removed old data, keep Overleaf Data

--- a/Notes/6.1-Serial-Timings.md
+++ b/Notes/6.1-Serial-Timings.md
@@ -391,15 +391,225 @@ Index by function name
   [11] free_pool              [22] make_fc_layer
   ```
 ---
----
-## Old data
+# Profile
 
-### 50000
+## 1200
 ```
-$ make
-nvc -Minfo=all -c11 -Wall -Wextra -march=native -o cnn-cifar10 main_serial.c layers_serial.c malloc2D.c
+$ ./cnn-cifar10-serial
+Serial Code
+CNN for 1200 images
+Loading input batch 1...
+Load Data time:0.028839 seconds
+Create Network time:0.000029 seconds
+Load Network Parameters time:0.008346 seconds
+Create Ouputs time:0.000047 seconds
 
- ./cnn-cifar10 
+Net Forward total time:37.396562 seconds
+    Time for conv1: 12.066903 seconds
+    Time for relu1: 0.102435 seconds
+    Time for pool1: 0.147990 seconds
+    Time for conv2: 19.346542 seconds
+    Time for relu2: 0.029167 seconds
+    Time for pool2: 0.044388 seconds
+    Time for conv3: 5.624670 seconds
+    Time for relu3: 0.007901 seconds
+    Time for pool3: 0.012163 seconds
+    Time for fc: 0.013078 seconds
+    Time for softmax: 0.000595 seconds
+
+  Conv: 37.038115 seconds
+  ReLU: 0.139503 seconds
+  Pool: 0.204541 seconds
+  FC:   0.013078 seconds
+  Softmax: 0.000595 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000084 seconds
+Free memory time:0.001688 seconds
+Total time:37.435595 seconds
+END!
+```
+
+```
+$ ./cnn-cifar10-serial-profile 
+Serial Code
+CNN for 1200 images
+Loading input batch 1...
+Load Data time:0.026320 seconds
+Create Network time:0.000010 seconds
+Load Network Parameters time:0.008364 seconds
+Create Ouputs time:0.000045 seconds
+
+Net Forward total time:37.411331 seconds
+    Time for conv1: 12.087406 seconds
+    Time for relu1: 0.102676 seconds
+    Time for pool1: 0.147422 seconds
+    Time for conv2: 19.347375 seconds
+    Time for relu2: 0.029384 seconds
+    Time for pool2: 0.044107 seconds
+    Time for conv3: 5.618572 seconds
+    Time for relu3: 0.007827 seconds
+    Time for pool3: 0.012220 seconds
+    Time for fc: 0.012973 seconds
+    Time for softmax: 0.000603 seconds
+
+  Conv: 37.053354 seconds
+  ReLU: 0.139887 seconds
+  Pool: 0.203749 seconds
+  FC:   0.012973 seconds
+  Softmax: 0.000603 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000091 seconds
+Free memory time:0.001732 seconds
+Total time:37.447893 seconds
+END!
+
+olia@krylov100:~/Diplomatiki/cnn-cifar10_0/serial_code$ gprof ./cnn-cifar10-serial-profile -b
+Flat profile:
+
+Each sample counts as 0.01 seconds.
+  %   cumulative   self              self     total           
+ time   seconds   seconds    calls  ms/call  ms/call  name    
+ 99.21     37.13    37.13     3600    10.31    10.31  conv_forward
+  0.43     37.29     0.16     3600     0.04     0.04  relu_forward
+  0.40     37.44     0.15     3600     0.04     0.04  pool_forward
+  0.05     37.46     0.02        1    20.02    20.02  load_data
+  0.03     37.47     0.01     1200     0.01     0.01  fc_forward
+  0.00     37.47     0.00    13207     0.00     0.00  cpu_timer_start
+  0.00     37.47     0.00    13207     0.00     0.00  cpu_timer_stop
+  0.00     37.47     0.00     1200     0.00     0.00  softmax_forward
+  0.00     37.47     0.00        3     0.00     0.00  free_conv
+  0.00     37.47     0.00        3     0.00     0.00  free_pool
+  0.00     37.47     0.00        3     0.00     0.00  free_relu
+  0.00     37.47     0.00        3     0.00     0.00  load_conv
+  0.00     37.47     0.00        3     0.00     0.00  make_conv_layer
+  0.00     37.47     0.00        3     0.00     0.00  make_pool_layer
+  0.00     37.47     0.00        3     0.00     0.00  make_relu_layer
+  0.00     37.47     0.00        2     0.00     0.00  malloc2D
+  0.00     37.47     0.00        1     0.00     0.00  arr2txt_2
+  0.00     37.47     0.00        1     0.00     0.00  free_fc
+  0.00     37.47     0.00        1     0.00     0.00  free_softmax
+  0.00     37.47     0.00        1     0.00     0.00  load_fc
+  0.00     37.47     0.00        1     0.00     0.00  make_fc_layer
+  0.00     37.47     0.00        1     0.00     0.00  make_softmax_layer
+
+
+                        Call graph
+
+
+granularity: each sample hit covers 2 byte(s) for 0.03% of 37.47 seconds
+
+index % time    self  children    called     name
+                                                 <spontaneous>
+[1]    100.0    0.00   37.47                 main [1]
+               37.13    0.00    3600/3600        conv_forward [2]
+                0.16    0.00    3600/3600        relu_forward [3]
+                0.15    0.00    3600/3600        pool_forward [4]
+                0.02    0.00       1/1           load_data [5]
+                0.01    0.00    1200/1200        fc_forward [6]
+                0.00    0.00   13207/13207       cpu_timer_start [7]
+                0.00    0.00   13207/13207       cpu_timer_stop [8]
+                0.00    0.00    1200/1200        softmax_forward [9]
+                0.00    0.00       3/3           make_conv_layer [14]
+                0.00    0.00       3/3           make_relu_layer [16]
+                0.00    0.00       3/3           make_pool_layer [15]
+                0.00    0.00       3/3           load_conv [13]
+                0.00    0.00       3/3           free_pool [11]
+                0.00    0.00       3/3           free_conv [10]
+                0.00    0.00       3/3           free_relu [12]
+                0.00    0.00       2/2           malloc2D [17]
+                0.00    0.00       1/1           make_fc_layer [22]
+                0.00    0.00       1/1           make_softmax_layer [23]
+                0.00    0.00       1/1           load_fc [21]
+                0.00    0.00       1/1           arr2txt_2 [18]
+                0.00    0.00       1/1           free_fc [19]
+                0.00    0.00       1/1           free_softmax [20]
+-----------------------------------------------
+               37.13    0.00    3600/3600        main [1]
+[2]     99.1   37.13    0.00    3600         conv_forward [2]
+-----------------------------------------------
+                0.16    0.00    3600/3600        main [1]
+[3]      0.4    0.16    0.00    3600         relu_forward [3]
+-----------------------------------------------
+                0.15    0.00    3600/3600        main [1]
+[4]      0.4    0.15    0.00    3600         pool_forward [4]
+-----------------------------------------------
+                0.02    0.00       1/1           main [1]
+[5]      0.1    0.02    0.00       1         load_data [5]
+-----------------------------------------------
+                0.01    0.00    1200/1200        main [1]
+[6]      0.0    0.01    0.00    1200         fc_forward [6]
+-----------------------------------------------
+                0.00    0.00   13207/13207       main [1]
+[7]      0.0    0.00    0.00   13207         cpu_timer_start [7]
+-----------------------------------------------
+                0.00    0.00   13207/13207       main [1]
+[8]      0.0    0.00    0.00   13207         cpu_timer_stop [8]
+-----------------------------------------------
+                0.00    0.00    1200/1200        main [1]
+[9]      0.0    0.00    0.00    1200         softmax_forward [9]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[10]     0.0    0.00    0.00       3         free_conv [10]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[11]     0.0    0.00    0.00       3         free_pool [11]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[12]     0.0    0.00    0.00       3         free_relu [12]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[13]     0.0    0.00    0.00       3         load_conv [13]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[14]     0.0    0.00    0.00       3         make_conv_layer [14]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[15]     0.0    0.00    0.00       3         make_pool_layer [15]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[16]     0.0    0.00    0.00       3         make_relu_layer [16]
+-----------------------------------------------
+                0.00    0.00       2/2           main [1]
+[17]     0.0    0.00    0.00       2         malloc2D [17]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[18]     0.0    0.00    0.00       1         arr2txt_2 [18]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[19]     0.0    0.00    0.00       1         free_fc [19]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[20]     0.0    0.00    0.00       1         free_softmax [20]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[21]     0.0    0.00    0.00       1         load_fc [21]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[22]     0.0    0.00    0.00       1         make_fc_layer [22]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[23]     0.0    0.00    0.00       1         make_softmax_layer [23]
+-----------------------------------------------
+
+
+Index by function name
+
+  [18] arr2txt_2              [12] free_relu              [16] make_relu_layer
+   [2] conv_forward           [20] free_softmax           [23] make_softmax_layer
+   [7] cpu_timer_start        [13] load_conv              [17] malloc2D
+   [8] cpu_timer_stop          [5] load_data               [4] pool_forward
+   [6] fc_forward             [21] load_fc                 [3] relu_forward
+  [10] free_conv              [14] make_conv_layer         [9] softmax_forward
+  [19] free_fc                [22] make_fc_layer
+  [11] free_pool              [15] make_pool_layer
+```
+
+## 50000
+
+```
+$ ./cnn-cifar10-serial
 Serial Code
 CNN for 50000 images
 Loading input batch 1...
@@ -407,33 +617,168 @@ Loading input batch 2...
 Loading input batch 3...
 Loading input batch 4...
 Loading input batch 5...
-Load Data time:0.940874 seconds
+Load Data time:0.963755 seconds
 Create Network time:0.000011 seconds
-Load Network Parameters time:0.008290 seconds
-Create Ouputs time:0.000483 seconds
+Load Network Parameters time:0.008413 seconds
+Create Ouputs time:0.000478 seconds
 
-Net Forward total time:1569.110519 seconds
-    Time for conv1: 505.895052 seconds
-    Time for relu1: 4.497355 seconds
-    Time for pool1: 6.276003 seconds
-    Time for conv2: 811.070243 seconds
-    Time for relu2: 1.301239 seconds
-    Time for pool2: 1.918563 seconds
-    Time for conv3: 235.958977 seconds
-    Time for relu3: 0.379663 seconds
-    Time for pool3: 0.555695 seconds
-    Time for fc: 0.594553 seconds
-    Time for softmax: 0.071594 seconds
+Net Forward total time:1530.585582 seconds
+    Time for conv1: 493.958384 seconds
+    Time for relu1: 4.193664 seconds
+    Time for pool1: 7.033642 seconds
+    Time for conv2: 790.840276 seconds
+    Time for relu2: 1.201267 seconds
+    Time for pool2: 1.811810 seconds
+    Time for conv3: 230.135574 seconds
+    Time for relu3: 0.327102 seconds
+    Time for pool3: 0.496297 seconds
+    Time for fc: 0.533932 seconds
+    Time for softmax: 0.024759 seconds
 
-  Conv: 1552.924272 seconds
-  ReLU: 6.178257 seconds
-  Pool: 8.750261 seconds
-  FC:   0.594553 seconds
-  Softmax: 0.071594 seconds
+  Conv: 1514.934234 seconds
+  ReLU: 5.722033 seconds
+  Pool: 9.341748 seconds
+  FC:   0.533932 seconds
+  Softmax: 0.024759 seconds
 
 Net Accuracy: 78.84 % 
-Net Accuracy time:0.004250 seconds
-Free memory time:0.065564 seconds
-Total time:1570.129991 seconds
+Net Accuracy time:0.003255 seconds
+Free memory time:0.056767 seconds
+Total time:1531.618262 seconds
 END!
+olia@krylov100:~/Diplomatiki/cnn-cifar10_0/serial_code$ gprof -b ./cnn-cifar10-serial-profile 
+Flat profile:
+
+Each sample counts as 0.01 seconds.
+  %   cumulative   self              self     total           
+ time   seconds   seconds    calls  ms/call  ms/call  name    
+ 99.10   1515.64  1515.64   150000    10.10    10.10  conv_forward
+  0.54   1523.85     8.21   150000     0.05     0.05  pool_forward
+  0.39   1529.76     5.91   150000     0.04     0.04  relu_forward
+  0.06   1530.65     0.89        1   891.08   891.08  load_data
+  0.03   1531.17     0.52    50000     0.01     0.01  fc_forward
+  0.00   1531.18     0.01   550007     0.00     0.00  cpu_timer_stop
+  0.00   1531.19     0.01                             main
+  0.00   1531.19     0.00   550007     0.00     0.00  cpu_timer_start
+  0.00   1531.19     0.00    50000     0.00     0.00  softmax_forward
+  0.00   1531.19     0.00        3     0.00     0.00  free_conv
+  0.00   1531.19     0.00        3     0.00     0.00  free_pool
+  0.00   1531.19     0.00        3     0.00     0.00  free_relu
+  0.00   1531.19     0.00        3     0.00     0.00  load_conv
+  0.00   1531.19     0.00        3     0.00     0.00  make_conv_layer
+  0.00   1531.19     0.00        3     0.00     0.00  make_pool_layer
+  0.00   1531.19     0.00        3     0.00     0.00  make_relu_layer
+  0.00   1531.19     0.00        2     0.00     0.00  malloc2D
+  0.00   1531.19     0.00        1     0.00     0.00  free_fc
+  0.00   1531.19     0.00        1     0.00     0.00  free_softmax
+  0.00   1531.19     0.00        1     0.00     0.00  load_fc
+  0.00   1531.19     0.00        1     0.00     0.00  make_fc_layer
+  0.00   1531.19     0.00        1     0.00     0.00  make_softmax_layer
+
+
+                        Call graph
+
+
+granularity: each sample hit covers 2 byte(s) for 0.00% of 1531.19 seconds
+
+index % time    self  children    called     name
+                                                 <spontaneous>
+[1]    100.0    0.01 1531.18                 main [1]
+             1515.64    0.00  150000/150000      conv_forward [2]
+                8.21    0.00  150000/150000      pool_forward [3]
+                5.91    0.00  150000/150000      relu_forward [4]
+                0.89    0.00       1/1           load_data [5]
+                0.52    0.00   50000/50000       fc_forward [6]
+                0.01    0.00  550007/550007      cpu_timer_stop [7]
+                0.00    0.00  550007/550007      cpu_timer_start [8]
+                0.00    0.00   50000/50000       softmax_forward [9]
+                0.00    0.00       3/3           make_conv_layer [14]
+                0.00    0.00       3/3           make_relu_layer [16]
+                0.00    0.00       3/3           make_pool_layer [15]
+                0.00    0.00       3/3           load_conv [13]
+                0.00    0.00       3/3           free_pool [11]
+                0.00    0.00       3/3           free_conv [10]
+                0.00    0.00       3/3           free_relu [12]
+                0.00    0.00       2/2           malloc2D [17]
+                0.00    0.00       1/1           make_fc_layer [21]
+                0.00    0.00       1/1           make_softmax_layer [22]
+                0.00    0.00       1/1           load_fc [20]
+                0.00    0.00       1/1           free_fc [18]
+                0.00    0.00       1/1           free_softmax [19]
+-----------------------------------------------
+             1515.64    0.00  150000/150000      main [1]
+[2]     99.0 1515.64    0.00  150000         conv_forward [2]
+-----------------------------------------------
+                8.21    0.00  150000/150000      main [1]
+[3]      0.5    8.21    0.00  150000         pool_forward [3]
+-----------------------------------------------
+                5.91    0.00  150000/150000      main [1]
+[4]      0.4    5.91    0.00  150000         relu_forward [4]
+-----------------------------------------------
+                0.89    0.00       1/1           main [1]
+[5]      0.1    0.89    0.00       1         load_data [5]
+-----------------------------------------------
+                0.52    0.00   50000/50000       main [1]
+[6]      0.0    0.52    0.00   50000         fc_forward [6]
+-----------------------------------------------
+                0.01    0.00  550007/550007      main [1]
+[7]      0.0    0.01    0.00  550007         cpu_timer_stop [7]
+-----------------------------------------------
+                0.00    0.00  550007/550007      main [1]
+[8]      0.0    0.00    0.00  550007         cpu_timer_start [8]
+-----------------------------------------------
+                0.00    0.00   50000/50000       main [1]
+[9]      0.0    0.00    0.00   50000         softmax_forward [9]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[10]     0.0    0.00    0.00       3         free_conv [10]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[11]     0.0    0.00    0.00       3         free_pool [11]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[12]     0.0    0.00    0.00       3         free_relu [12]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[13]     0.0    0.00    0.00       3         load_conv [13]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[14]     0.0    0.00    0.00       3         make_conv_layer [14]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[15]     0.0    0.00    0.00       3         make_pool_layer [15]
+-----------------------------------------------
+                0.00    0.00       3/3           main [1]
+[16]     0.0    0.00    0.00       3         make_relu_layer [16]
+-----------------------------------------------
+                0.00    0.00       2/2           main [1]
+[17]     0.0    0.00    0.00       2         malloc2D [17]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[18]     0.0    0.00    0.00       1         free_fc [18]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[19]     0.0    0.00    0.00       1         free_softmax [19]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[20]     0.0    0.00    0.00       1         load_fc [20]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[21]     0.0    0.00    0.00       1         make_fc_layer [21]
+-----------------------------------------------
+                0.00    0.00       1/1           main [1]
+[22]     0.0    0.00    0.00       1         make_softmax_layer [22]
+-----------------------------------------------
+
+
+Index by function name
+
+   [2] conv_forward           [19] free_softmax           [16] make_relu_layer
+   [8] cpu_timer_start        [13] load_conv              [22] make_softmax_layer
+   [7] cpu_timer_stop          [5] load_data              [17] malloc2D
+   [6] fc_forward             [20] load_fc                 [3] pool_forward
+  [10] free_conv               [1] main                    [4] relu_forward
+  [18] free_fc                [14] make_conv_layer         [9] softmax_forward
+  [11] free_pool              [21] make_fc_layer
+  [12] free_relu              [15] make_pool_layer
 ```
