add Padding info

--- a/Notes/6.5-Parallel-Constructs.md
+++ b/Notes/6.5-Parallel-Constructs.md
@@ -79,6 +79,40 @@ pool_forward:
 fc_forward:
     210, FMA (fused multiply-add) instruction(s) generated
 nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -gpu=managed -o cnn-cifar10 main.o layers.o malloc2D.o timer.o
+
+$ ./cnn-cifar10
+Conv: Kernels Code
+CNN for 1200 images
+Loading input batch 1...
+Load Data time:0.015023 seconds
+Create Network time:0.000060 seconds
+Load Network Parameters time:0.008623 seconds
+Create Ouputs time:0.000034 seconds
+
+Net Forward total time:54.501967 seconds
+    Time for conv1: 29.932590 seconds
+    Time for relu1: 0.175017 seconds
+    Time for pool1: 0.058816 seconds
+    Time for conv2: 19.034199 seconds
+    Time for relu2: 0.072634 seconds
+    Time for pool2: 0.017005 seconds
+    Time for conv3: 5.042233 seconds
+    Time for relu3: 0.070464 seconds
+    Time for pool3: 0.024876 seconds
+    Time for fc: 0.073039 seconds
+    Time for softmax: 0.000647 seconds
+
+  Conv: 54.009022 seconds
+  ReLU: 0.318115 seconds
+  Pool: 0.100697 seconds
+  FC:   0.073039 seconds
+  Softmax: 0.000647 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000035 seconds
+Free memory time:0.000071 seconds
+Total time:54.525814 seconds
+END!
 ```
 
 
@@ -143,7 +177,7 @@ nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -gpu=managed -o cnn-cifar10
 
 
 $ ./cnn-cifar10
-Serial Code
+Conv: Kernels- loop independent Code
 CNN for 1200 images
 Loading input batch 1...
 Load Data time:0.013188 seconds
@@ -181,7 +215,7 @@ END!
 
 ```
 $ ./cnn-cifar10 
-Serial Code
+Conv:Parallel - loop Code
 CNN for 1200 images
 Loading input batch 1...
 Load Data time:0.012991 seconds
@@ -218,7 +252,7 @@ END!
 
 ```
 $ nvprof ./cnn-cifar10-profile 
-Serial Code
+Conv:Parallel - loop Code
 CNN for 1200 images
 ==1059090== NVPROF is profiling process 1059090, command: ./cnn-cifar10-profile
 Loading input batch 1...
@@ -291,5 +325,44 @@ Device "Tesla V100-PCIE-32GB (0)"
 Total CPU Page faults: 18057
 Total CPU thrashes: 7116
 ```
+#### 50000 images
 
+```
+$ ./cnn-cifar10
+Conv:Parallel - loop Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.586575 seconds
+Create Network time:0.000634 seconds
+Load Network Parameters time:0.008383 seconds
+Create Ouputs time:0.000637 seconds
 
+Net Forward total time:302.497609 seconds
+    Time for conv1: 128.678537 seconds
+    Time for relu1: 9.762374 seconds
+    Time for pool1: 5.872076 seconds
+    Time for conv2: 100.174411 seconds
+    Time for relu2: 8.266072 seconds
+    Time for pool2: 1.866317 seconds
+    Time for conv3: 39.605659 seconds
+    Time for relu3: 6.125257 seconds
+    Time for pool3: 0.620170 seconds
+    Time for fc: 1.489888 seconds
+    Time for softmax: 0.016679 seconds
+
+  Conv: 268.458607 seconds
+  ReLU: 24.153703 seconds
+  Pool: 8.358563 seconds
+  FC:   1.489888 seconds
+  Softmax: 0.016679 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.000820 seconds
+Free memory time:0.023130 seconds
+Total time:303.117788 seconds
+END!
+```
