Notes: Parallel timing

--- a/Notes/6.5-Parallel-Constructs.md
+++ b/Notes/6.5-Parallel-Constructs.md
@@ -213,6 +213,7 @@ END!
 
 ## Parallel Construct
 
+#### 1200 images
 ```
 $ ./cnn-cifar10 
 Conv:Parallel - loop Code
@@ -248,8 +249,51 @@ Free memory time:0.000068 seconds
 Total time:7.500379 seconds
 END!
 ```
+
+#### 50000 images
+```
+$ ./cnn-cifar10
+Conv:Parallel - loop Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.586575 seconds
+Create Network time:0.000634 seconds
+Load Network Parameters time:0.008383 seconds
+Create Ouputs time:0.000637 seconds
+
+Net Forward total time:302.497609 seconds
+    Time for conv1: 128.678537 seconds
+    Time for relu1: 9.762374 seconds
+    Time for pool1: 5.872076 seconds
+    Time for conv2: 100.174411 seconds
+    Time for relu2: 8.266072 seconds
+    Time for pool2: 1.866317 seconds
+    Time for conv3: 39.605659 seconds
+    Time for relu3: 6.125257 seconds
+    Time for pool3: 0.620170 seconds
+    Time for fc: 1.489888 seconds
+    Time for softmax: 0.016679 seconds
+
+  Conv: 268.458607 seconds
+  ReLU: 24.153703 seconds
+  Pool: 8.358563 seconds
+  FC:   1.489888 seconds
+  Softmax: 0.016679 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.000820 seconds
+Free memory time:0.023130 seconds
+Total time:303.117788 seconds
+END!
+```
+
 ### Profiling Parallel
 
+#### 1200 images
 ```
 $ nvprof ./cnn-cifar10-profile 
 Conv:Parallel - loop Code
@@ -325,44 +369,85 @@ Device "Tesla V100-PCIE-32GB (0)"
 Total CPU Page faults: 18057
 Total CPU thrashes: 7116
 ```
-#### 50000 images
 
+#### 50000 images
 ```
-$ ./cnn-cifar10
+$ nvprof ./cnn-cifar10-profile 
 Conv:Parallel - loop Code
 CNN for 50000 images
+==1108531== NVPROF is profiling process 1108531, command: ./cnn-cifar10-profile
 Loading input batch 1...
 Loading input batch 2...
 Loading input batch 3...
 Loading input batch 4...
 Loading input batch 5...
-Load Data time:0.586575 seconds
-Create Network time:0.000634 seconds
-Load Network Parameters time:0.008383 seconds
-Create Ouputs time:0.000637 seconds
+Load Data time:0.597716 seconds
+Create Network time:0.000644 seconds
+Load Network Parameters time:0.016217 seconds
+Create Ouputs time:0.000829 seconds
 
-Net Forward total time:302.497609 seconds
-    Time for conv1: 128.678537 seconds
-    Time for relu1: 9.762374 seconds
-    Time for pool1: 5.872076 seconds
-    Time for conv2: 100.174411 seconds
-    Time for relu2: 8.266072 seconds
-    Time for pool2: 1.866317 seconds
-    Time for conv3: 39.605659 seconds
-    Time for relu3: 6.125257 seconds
-    Time for pool3: 0.620170 seconds
-    Time for fc: 1.489888 seconds
-    Time for softmax: 0.016679 seconds
+Net Forward total time:348.456847 seconds
+    Time for conv1: 135.364732 seconds
+    Time for relu1: 20.921233 seconds
+    Time for pool1: 10.041152 seconds
+    Time for conv2: 103.875268 seconds
+    Time for relu2: 14.484225 seconds
+    Time for pool2: 3.501787 seconds
+    Time for conv3: 46.575234 seconds
+    Time for relu3: 10.700219 seconds
+    Time for pool3: 1.259931 seconds
+    Time for fc: 1.694125 seconds
+    Time for softmax: 0.017843 seconds
 
-  Conv: 268.458607 seconds
-  ReLU: 24.153703 seconds
-  Pool: 8.358563 seconds
-  FC:   1.489888 seconds
-  Softmax: 0.016679 seconds
+  Conv: 285.815234 seconds
+  ReLU: 46.105677 seconds
+  Pool: 14.802871 seconds
+  FC:   1.694125 seconds
+  Softmax: 0.017843 seconds
 
 Net Accuracy: 78.84 % 
-Net Accuracy time:0.000820 seconds
-Free memory time:0.023130 seconds
-Total time:303.117788 seconds
+Net Accuracy time:0.000725 seconds
+Free memory time:0.021763 seconds
+Total time:349.094740 seconds
 END!
+==1108531== Profiling application: ./cnn-cifar10-profile
+==1108531== Profiling result:
+            Type  Time(%)      Time     Calls       Avg       Min       Max  Name
+ GPU activities:  100.00%  281.667s    150000  1.8778ms  632.13us  6.7727ms  _8layers_c_conv_forward_48_gpu
+      API calls:   99.47%  282.437s    300000  941.46us  1.2930us  6.7756ms  cuStreamSynchronize
+                    0.38%  1.07378s    150000  7.1580us  4.6880us  1.1479ms  cuLaunchKernel
+                    0.06%  173.74ms         1  173.74ms  173.74ms  173.74ms  cuDevicePrimaryCtxRetain
+                    0.05%  131.43ms    300000     438ns     182ns  804.01us  cuOccupancyMaxActiveBlocksPerMultiprocessor
+                    0.02%  46.182ms     50018     923ns     312ns  919.92us  cuPointerGetAttributes
+                    0.01%  39.947ms    150009     266ns     139ns  657.99us  cuDeviceGetAttribute
+                    0.01%  21.679ms         1  21.679ms  21.679ms  21.679ms  cuMemFree
+                    0.01%  20.642ms         2  10.321ms  82.478us  20.560ms  cuMemAllocManaged
+                    0.00%  1.2433ms         1  1.2433ms  1.2433ms  1.2433ms  cuMemAllocHost
+                    0.00%  131.17us         1  131.17us  131.17us  131.17us  cuMemAlloc
+                    0.00%  115.93us         1  115.93us  115.93us  115.93us  cuModuleLoadDataEx
+                    0.00%  20.243us         1  20.243us  20.243us  20.243us  cuModuleGetFunction
+                    0.00%  9.7330us         1  9.7330us  9.7330us  9.7330us  cuDeviceGetPCIBusId
+                    0.00%  2.1290us         3     709ns     194ns  1.2980us  cuDeviceGetCount
+                    0.00%  2.0510us         3     683ns     217ns  1.3190us  cuCtxSetCurrent
+                    0.00%  1.7320us         2     866ns     113ns  1.6190us  cuDeviceTotalMem
+                    0.00%     802ns         1     802ns     802ns     802ns  cuDeviceComputeCapability
+                    0.00%     766ns         2     383ns     246ns     520ns  cuDeviceGet
+                    0.00%     688ns         3     229ns     158ns     336ns  cuDriverGetVersion
+                    0.00%     495ns         1     495ns     495ns     495ns  cuCtxGetCurrent
+ OpenACC (excl):   99.03%  282.767s    300000  942.56us  1.9170us  6.7767ms  acc_wait@layers.c:48
+                    0.47%  1.34475s    150000  8.9650us  5.9610us  2.0855ms  acc_enqueue_launch@layers.c:48 (_8layers_c_conv_forward_48_gpu)
+                    0.21%  610.03ms    150000  4.0660us  2.7400us  982.62us  acc_compute_construct@layers.c:48
+                    0.19%  545.30ms    150000  3.6350us  1.8690us  1.8649ms  acc_enter_data@layers.c:48
+                    0.10%  272.86ms    150000  1.8190us  1.1110us  852.29us  acc_exit_data@layers.c:48
+                    0.00%  149.60us         1  149.60us  149.60us  149.60us  acc_device_init
+
+==1108531== Unified Memory profiling result:
+Device "Tesla V100-PCIE-32GB (0)"
+   Count  Avg Size  Min Size  Max Size  Total Size  Total Time  Name
+ 1023248  26.825KB  4.0000KB  0.9961MB  26.17808GB   4.558754s  Host To Device
+ 1805969  14.867KB  4.0000KB  252.00KB  25.60593GB   3.860360s  Device To Host
+  237763         -         -         -           -  56.523584s  Gpu page fault groups
+  566127  4.0000KB  4.0000KB  4.0000KB  2.159603GB           -  Memory thrashes
+Total CPU Page faults: 1061919
+Total CPU thrashes: 566127
 ```
