--- a/Notes/6.6-Padding-Struct.md
+++ b/Notes/6.6-Padding-Struct.md
@@ -2,6 +2,7 @@
 
 ## Padding on Conv Struct
 
+#### 1200 images
 ```
 $ ./cnn-cifar10-serial 
 Serial Code
@@ -36,4 +37,203 @@ Net Accuracy time:0.000102 seconds
 Free memory time:0.001775 seconds
 Total time:23.164882 seconds
 END!
+```
+#### 50k images
+
+```
+$ ./cnn-cifar10-serial 
+Serial Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.974951 seconds
+Create Network time:0.000070 seconds
+Load Network Parameters time:0.008447 seconds
+Create Ouputs time:0.000443 seconds
+
+Net Forward total time:923.071477 seconds
+    Time for conv1: 286.312681 seconds
+    Time for relu1: 4.397399 seconds
+    Time for pool1: 6.151344 seconds
+    Time for conv2: 473.989921 seconds
+    Time for relu2: 1.234319 seconds
+    Time for pool2: 1.841110 seconds
+    Time for conv3: 147.732905 seconds
+    Time for relu3: 0.322829 seconds
+    Time for pool3: 0.499408 seconds
+    Time for fc: 0.544242 seconds
+    Time for softmax: 0.022354 seconds
+
+  Conv: 908.035507 seconds
+  ReLU: 5.954547 seconds
+  Pool: 8.491862 seconds
+  FC:   0.544242 seconds
+  Softmax: 0.022354 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.004081 seconds
+Free memory time:0.060855 seconds
+Total time:924.120324 seconds
+END!
+```
+
+## Parallel with Pad-struct
+
+pad_input -> Parallel
+
+```
+$ make
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -gpu=managed -c layers.c -o layers.o
+pad_input:
+     51, Generating implicit firstprivate(c)
+         Generating NVIDIA GPU code
+         53, #pragma acc loop gang /* blockIdx.x */
+         55, #pragma acc loop seq
+         57, #pragma acc loop vector(128) /* threadIdx.x */
+     51, Generating implicit copyin(X[:]) [if not already present]
+         Generating implicit copy(l) [if not already present]
+     55, Loop is parallelizable
+     57, Loop is parallelizable
+conv_forward:
+     71, Generating implicit firstprivate(m)
+         Generating NVIDIA GPU code
+         75, #pragma acc loop gang /* blockIdx.x */
+         77, #pragma acc loop seq
+         79, #pragma acc loop seq
+         83, #pragma acc loop seq
+         84, #pragma acc loop seq
+         85, #pragma acc loop vector(128) /* threadIdx.x */
+             Generating implicit reduction(+:sum)
+     71, Generating implicit copy(Y[:]) [if not already present]
+         Generating implicit copyin(l) [if not already present]
+     77, Loop is parallelizable
+     79, Loop is parallelizable
+     83, Loop is parallelizable
+     84, Loop is parallelizable
+     85, Loop is parallelizable
+     90, FMA (fused multiply-add) instruction(s) generated
+pool_forward:
+    174, Zero trip check eliminated
+fc_forward:
+    229, FMA (fused multiply-add) instruction(s) generated
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -gpu=managed -o cnn-cifar10 main.o layers.o malloc2D.o timer.o
+
+$ ./cnn-cifar10 
+Serial Code
+CNN for 1200 images
+Loading input batch 1...
+Load Data time:0.012693 seconds
+Create Network time:0.000835 seconds
+Load Network Parameters time:0.008211 seconds
+Create Ouputs time:0.000037 seconds
+
+Net Forward total time:13.134131 seconds
+    Time for conv1: 4.682513 seconds
+    Time for relu1: 0.099147 seconds
+    Time for pool1: 0.073766 seconds
+    Time for conv2: 5.822249 seconds
+    Time for relu2: 0.102650 seconds
+    Time for pool2: 0.071266 seconds
+    Time for conv3: 2.086201 seconds
+    Time for relu3: 0.070222 seconds
+    Time for pool3: 0.024853 seconds
+    Time for fc: 0.100281 seconds
+    Time for softmax: 0.000561 seconds
+
+  Conv: 12.590963 seconds
+  ReLU: 0.272019 seconds
+  Pool: 0.169886 seconds
+  FC:   0.100281 seconds
+  Softmax: 0.000561 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000032 seconds
+Free memory time:0.000072 seconds
+Total time:13.156010 seconds
+END!
+
+$ nvprof ./cnn-cifar10-profile 
+Serial Code
+CNN for 1200 images
+==1184684== NVPROF is profiling process 1184684, command: ./cnn-cifar10-profile
+Loading input batch 1...
+Load Data time:0.015800 seconds
+Create Network time:0.000997 seconds
+Load Network Parameters time:0.008954 seconds
+Create Ouputs time:0.000129 seconds
+
+Net Forward total time:13.891809 seconds
+    Time for conv1: 4.757180 seconds
+    Time for relu1: 0.189840 seconds
+    Time for pool1: 0.067330 seconds
+    Time for conv2: 5.889218 seconds
+    Time for relu2: 0.231486 seconds
+    Time for pool2: 0.133288 seconds
+    Time for conv3: 2.152808 seconds
+    Time for relu3: 0.188091 seconds
+    Time for pool3: 0.058723 seconds
+    Time for fc: 0.222529 seconds
+    Time for softmax: 0.000751 seconds
+
+  Conv: 12.799205 seconds
+  ReLU: 0.609417 seconds
+  Pool: 0.259342 seconds
+  FC:   0.222529 seconds
+  Softmax: 0.000751 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000030 seconds
+Free memory time:0.000073 seconds
+Total time:13.917791 seconds
+END!
+==1184684== Profiling application: ./cnn-cifar10-profile
+==1184684== Profiling result:
+            Type  Time(%)      Time     Calls       Avg       Min       Max  Name
+ GPU activities:   90.45%  11.4067s      3600  3.1685ms  1.4063ms  4.9368ms  _8layers_c_conv_forward_71_gpu
+                    9.55%  1.20382s      3600  334.39us  155.46us  1.1522ms  _8layers_c_pad_input_51_gpu
+                    0.00%  476.51us         3  158.84us  1.6950us  338.69us  [CUDA memset]
+      API calls:   97.85%  12.6395s     14400  877.74us     988ns  5.1338ms  cuStreamSynchronize
+                    1.53%  197.78ms         1  197.78ms  197.78ms  197.78ms  cuDevicePrimaryCtxRetain
+                    0.37%  47.505ms      7200  6.5970us  3.5550us  778.25us  cuLaunchKernel
+                    0.16%  20.514ms         1  20.514ms  20.514ms  20.514ms  cuMemAllocManaged
+                    0.05%  6.9484ms     14400     482ns     199ns  837.03us  cuOccupancyMaxActiveBlocksPerMultiprocessor
+                    0.02%  2.1213ms      7209     294ns     145ns  14.498us  cuDeviceGetAttribute
+                    0.01%  1.3097ms      1208  1.0840us     271ns  57.776us  cuPointerGetAttributes
+                    0.01%  1.2983ms         1  1.2983ms  1.2983ms  1.2983ms  cuMemAllocHost
+                    0.00%  562.61us         3  187.54us  10.266us  396.23us  cuMemsetD8
+                    0.00%  150.14us         1  150.14us  150.14us  150.14us  cuModuleLoadDataEx
+                    0.00%  143.11us         1  143.11us  143.11us  143.11us  cuMemAlloc
+                    0.00%  9.7800us         1  9.7800us  9.7800us  9.7800us  cuCtxGetCurrent
+                    0.00%  9.7270us         1  9.7270us  9.7270us  9.7270us  cuDeviceGetPCIBusId
+                    0.00%  4.7510us         2  2.3750us     512ns  4.2390us  cuModuleGetFunction
+                    0.00%  1.6920us         3     564ns     190ns  1.2410us  cuDeviceGetCount
+                    0.00%  1.3380us         3     446ns     189ns     708ns  cuCtxSetCurrent
+                    0.00%     791ns         2     395ns     229ns     562ns  cuDeviceGet
+                    0.00%     636ns         3     212ns     175ns     273ns  cuDriverGetVersion
+                    0.00%     481ns         1     481ns     481ns     481ns  cuDeviceComputeCapability
+                    0.00%     404ns         2     202ns     117ns     287ns  cuDeviceTotalMem
+ OpenACC (excl):   89.41%  11.4317s      7200  1.5877ms  1.5840us  5.1347ms  acc_wait@layers.c:71
+                    9.58%  1.22517s      7200  170.16us  1.9940us  1.3603ms  acc_wait@layers.c:51
+                    0.27%  34.830ms      3600  9.6750us  6.0210us  784.10us  acc_enqueue_launch@layers.c:51 (_8layers_c_pad_input_51_gpu)
+                    0.21%  26.235ms      3600  7.2870us  4.5310us  781.17us  acc_enqueue_launch@layers.c:71 (_8layers_c_conv_forward_71_gpu)
+                    0.14%  17.897ms      3600  4.9710us  2.8180us  844.94us  acc_compute_construct@layers.c:51
+                    0.11%  14.627ms      3600  4.0630us  2.5470us  41.703us  acc_compute_construct@layers.c:71
+                    0.11%  13.922ms      3600  3.8670us  1.8120us  827.08us  acc_enter_data@layers.c:51
+                    0.06%  7.7094ms      3600  2.1410us  1.1240us  774.81us  acc_enter_data@layers.c:71
+                    0.05%  6.6526ms      3600  1.8470us  1.0450us  22.348us  acc_exit_data@layers.c:71
+                    0.05%  6.1234ms      3600  1.7000us  1.0430us  46.456us  acc_exit_data@layers.c:51
+                    0.00%  183.09us         1  183.09us  183.09us  183.09us  acc_device_init
+
+==1184684== Unified Memory profiling result:
+Device "Tesla V100-PCIE-32GB (0)"
+   Count  Avg Size  Min Size  Max Size  Total Size  Total Time  Name
+   18159  17.752KB  4.0000KB  0.9961MB  314.8047MB  66.49012ms  Host To Device
+   24571  12.528KB  4.0000KB  448.00KB  300.6211MB  48.51067ms  Device To Host
+    7274         -         -         -           -   1.564786s  Gpu page fault groups
+    3241  4.0000KB  4.0000KB  4.0000KB  12.66016MB           -  Memory thrashes
+Total CPU Page faults: 16402
+Total CPU thrashes: 3241
 ```
