--- a/Notes/6.6-Padding-Struct.md
+++ b/Notes/6.6-Padding-Struct.md
@@ -86,154 +86,209 @@ pad_input -> Parallel
 
 ```
 $ make
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -gpu=managed -c main.c -o main.o
+arr2txt:
+    332, Zero trip check eliminated
+arr2txt_2:
+    354, Zero trip check eliminated
 nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -gpu=managed -c layers.c -o layers.o
 pad_input:
-     51, Generating implicit firstprivate(c)
+     60, Generating implicit firstprivate(c)
          Generating NVIDIA GPU code
-         53, #pragma acc loop gang /* blockIdx.x */
-         55, #pragma acc loop seq
-         57, #pragma acc loop vector(128) /* threadIdx.x */
-     51, Generating implicit copyin(X[:]) [if not already present]
+         63, #pragma acc loop gang /* blockIdx.x */
+         65, #pragma acc loop seq
+         67, #pragma acc loop vector(128) /* threadIdx.x */
+     60, Generating implicit copyin(X[:]) [if not already present]
          Generating implicit copy(l) [if not already present]
-     55, Loop is parallelizable
-     57, Loop is parallelizable
+     65, Loop is parallelizable
+     67, Loop is parallelizable
 conv_forward:
-     71, Generating implicit firstprivate(m)
+     80, Generating implicit firstprivate(m)
          Generating NVIDIA GPU code
-         75, #pragma acc loop gang /* blockIdx.x */
-         77, #pragma acc loop seq
-         79, #pragma acc loop seq
-         83, #pragma acc loop seq
-         84, #pragma acc loop seq
-         85, #pragma acc loop vector(128) /* threadIdx.x */
-             Generating implicit reduction(+:sum)
-     71, Generating implicit copy(Y[:]) [if not already present]
+         84, #pragma acc loop gang /* blockIdx.x */
+         86, #pragma acc loop seq
+         88, #pragma acc loop seq
+         93, #pragma acc loop seq
+         94, #pragma acc loop seq
+         95, #pragma acc loop vector(128) /* threadIdx.x */
+             Generating reduction(+:sum)
+     80, Generating implicit copy(Y[:]) [if not already present]
          Generating implicit copyin(l) [if not already present]
-     77, Loop is parallelizable
-     79, Loop is parallelizable
-     83, Loop is parallelizable
-     84, Loop is parallelizable
-     85, Loop is parallelizable
-     90, FMA (fused multiply-add) instruction(s) generated
+     86, Loop is parallelizable
+     88, Loop is parallelizable
+     93, Loop is parallelizable
+     94, Loop is parallelizable
+     95, Loop is parallelizable
+    100, FMA (fused multiply-add) instruction(s) generated
 pool_forward:
-    174, Zero trip check eliminated
+    183, Zero trip check eliminated
 fc_forward:
-    229, FMA (fused multiply-add) instruction(s) generated
+    238, FMA (fused multiply-add) instruction(s) generated
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -gpu=managed -c malloc2D.c -o malloc2D.o
+nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -gpu=managed -c timer.c -o timer.o
+cpu_timer_stop:
+     11, FMA (fused multiply-add) instruction(s) generated
 nvc -acc -Minfo=all -c11 -Wall -Wextra -march=native -gpu=managed -o cnn-cifar10 main.o layers.o malloc2D.o timer.o
-
-$ ./cnn-cifar10 
-Serial Code
+olia@krylov100:~/Diplomatiki/cnn-cifar10_0/serial2parallel-pad$ ./cnn-cifar10 
+Parallel (pad) Code
 CNN for 1200 images
 Loading input batch 1...
-Load Data time:0.012693 seconds
-Create Network time:0.000835 seconds
-Load Network Parameters time:0.008211 seconds
-Create Ouputs time:0.000037 seconds
+Load Data time:0.013170 seconds
+Create Network time:0.000736 seconds
+Load Network Parameters time:0.008616 seconds
+Create Ouputs time:0.000039 seconds
 
-Net Forward total time:13.134131 seconds
-    Time for conv1: 4.682513 seconds
-    Time for relu1: 0.099147 seconds
-    Time for pool1: 0.073766 seconds
-    Time for conv2: 5.822249 seconds
-    Time for relu2: 0.102650 seconds
-    Time for pool2: 0.071266 seconds
-    Time for conv3: 2.086201 seconds
-    Time for relu3: 0.070222 seconds
-    Time for pool3: 0.024853 seconds
-    Time for fc: 0.100281 seconds
-    Time for softmax: 0.000561 seconds
+Net Forward total time:5.583437 seconds
+    Time for conv1: 2.423479 seconds
+    Time for relu1: 0.090080 seconds
+    Time for pool1: 0.075770 seconds
+    Time for conv2: 1.836205 seconds
+    Time for relu2: 0.072588 seconds
+    Time for pool2: 0.067707 seconds
+    Time for conv3: 0.824653 seconds
+    Time for relu3: 0.060623 seconds
+    Time for pool3: 0.026688 seconds
+    Time for fc: 0.104544 seconds
+    Time for softmax: 0.000635 seconds
 
-  Conv: 12.590963 seconds
-  ReLU: 0.272019 seconds
-  Pool: 0.169886 seconds
-  FC:   0.100281 seconds
-  Softmax: 0.000561 seconds
+  Conv: 5.084337 seconds
+  ReLU: 0.223291 seconds
+  Pool: 0.170165 seconds
+  FC:   0.104544 seconds
+  Softmax: 0.000635 seconds
 
 Net Accuracy: 78.25 % 
-Net Accuracy time:0.000032 seconds
-Free memory time:0.000072 seconds
-Total time:13.156010 seconds
+Net Accuracy time:0.000023 seconds
+Free memory time:0.000075 seconds
+Total time:5.606095 seconds
 END!
 
 $ nvprof ./cnn-cifar10-profile 
-Serial Code
+Parallel (pad) Code
 CNN for 1200 images
-==1184684== NVPROF is profiling process 1184684, command: ./cnn-cifar10-profile
+==1668494== NVPROF is profiling process 1668494, command: ./cnn-cifar10-profile
 Loading input batch 1...
-Load Data time:0.015800 seconds
-Create Network time:0.000997 seconds
-Load Network Parameters time:0.008954 seconds
-Create Ouputs time:0.000129 seconds
+Load Data time:0.026003 seconds
+Create Network time:0.001077 seconds
+Load Network Parameters time:0.009128 seconds
+Create Ouputs time:0.000128 seconds
 
-Net Forward total time:13.891809 seconds
-    Time for conv1: 4.757180 seconds
-    Time for relu1: 0.189840 seconds
-    Time for pool1: 0.067330 seconds
-    Time for conv2: 5.889218 seconds
-    Time for relu2: 0.231486 seconds
-    Time for pool2: 0.133288 seconds
-    Time for conv3: 2.152808 seconds
-    Time for relu3: 0.188091 seconds
-    Time for pool3: 0.058723 seconds
-    Time for fc: 0.222529 seconds
-    Time for softmax: 0.000751 seconds
+Net Forward total time:6.284660 seconds
+    Time for conv1: 2.489260 seconds
+    Time for relu1: 0.175896 seconds
+    Time for pool1: 0.092586 seconds
+    Time for conv2: 1.872586 seconds
+    Time for relu2: 0.174134 seconds
+    Time for pool2: 0.144162 seconds
+    Time for conv3: 0.863933 seconds
+    Time for relu3: 0.167714 seconds
+    Time for pool3: 0.062198 seconds
+    Time for fc: 0.240878 seconds
+    Time for softmax: 0.000734 seconds
 
-  Conv: 12.799205 seconds
-  ReLU: 0.609417 seconds
-  Pool: 0.259342 seconds
-  FC:   0.222529 seconds
-  Softmax: 0.000751 seconds
+  Conv: 5.225779 seconds
+  ReLU: 0.517745 seconds
+  Pool: 0.298946 seconds
+  FC:   0.240878 seconds
+  Softmax: 0.000734 seconds
 
 Net Accuracy: 78.25 % 
-Net Accuracy time:0.000030 seconds
-Free memory time:0.000073 seconds
-Total time:13.917791 seconds
+Net Accuracy time:0.000033 seconds
+Free memory time:0.000092 seconds
+Total time:6.321122 seconds
 END!
-==1184684== Profiling application: ./cnn-cifar10-profile
-==1184684== Profiling result:
+==1668494== Profiling application: ./cnn-cifar10-profile
+==1668494== Profiling result:
             Type  Time(%)      Time     Calls       Avg       Min       Max  Name
- GPU activities:   90.45%  11.4067s      3600  3.1685ms  1.4063ms  4.9368ms  _8layers_c_conv_forward_71_gpu
-                    9.55%  1.20382s      3600  334.39us  155.46us  1.1522ms  _8layers_c_pad_input_51_gpu
-                    0.00%  476.51us         3  158.84us  1.6950us  338.69us  [CUDA memset]
-      API calls:   97.85%  12.6395s     14400  877.74us     988ns  5.1338ms  cuStreamSynchronize
-                    1.53%  197.78ms         1  197.78ms  197.78ms  197.78ms  cuDevicePrimaryCtxRetain
-                    0.37%  47.505ms      7200  6.5970us  3.5550us  778.25us  cuLaunchKernel
-                    0.16%  20.514ms         1  20.514ms  20.514ms  20.514ms  cuMemAllocManaged
-                    0.05%  6.9484ms     14400     482ns     199ns  837.03us  cuOccupancyMaxActiveBlocksPerMultiprocessor
-                    0.02%  2.1213ms      7209     294ns     145ns  14.498us  cuDeviceGetAttribute
-                    0.01%  1.3097ms      1208  1.0840us     271ns  57.776us  cuPointerGetAttributes
-                    0.01%  1.2983ms         1  1.2983ms  1.2983ms  1.2983ms  cuMemAllocHost
-                    0.00%  562.61us         3  187.54us  10.266us  396.23us  cuMemsetD8
-                    0.00%  150.14us         1  150.14us  150.14us  150.14us  cuModuleLoadDataEx
-                    0.00%  143.11us         1  143.11us  143.11us  143.11us  cuMemAlloc
-                    0.00%  9.7800us         1  9.7800us  9.7800us  9.7800us  cuCtxGetCurrent
-                    0.00%  9.7270us         1  9.7270us  9.7270us  9.7270us  cuDeviceGetPCIBusId
-                    0.00%  4.7510us         2  2.3750us     512ns  4.2390us  cuModuleGetFunction
-                    0.00%  1.6920us         3     564ns     190ns  1.2410us  cuDeviceGetCount
-                    0.00%  1.3380us         3     446ns     189ns     708ns  cuCtxSetCurrent
-                    0.00%     791ns         2     395ns     229ns     562ns  cuDeviceGet
-                    0.00%     636ns         3     212ns     175ns     273ns  cuDriverGetVersion
-                    0.00%     481ns         1     481ns     481ns     481ns  cuDeviceComputeCapability
-                    0.00%     404ns         2     202ns     117ns     287ns  cuDeviceTotalMem
- OpenACC (excl):   89.41%  11.4317s      7200  1.5877ms  1.5840us  5.1347ms  acc_wait@layers.c:71
-                    9.58%  1.22517s      7200  170.16us  1.9940us  1.3603ms  acc_wait@layers.c:51
-                    0.27%  34.830ms      3600  9.6750us  6.0210us  784.10us  acc_enqueue_launch@layers.c:51 (_8layers_c_pad_input_51_gpu)
-                    0.21%  26.235ms      3600  7.2870us  4.5310us  781.17us  acc_enqueue_launch@layers.c:71 (_8layers_c_conv_forward_71_gpu)
-                    0.14%  17.897ms      3600  4.9710us  2.8180us  844.94us  acc_compute_construct@layers.c:51
-                    0.11%  14.627ms      3600  4.0630us  2.5470us  41.703us  acc_compute_construct@layers.c:71
-                    0.11%  13.922ms      3600  3.8670us  1.8120us  827.08us  acc_enter_data@layers.c:51
-                    0.06%  7.7094ms      3600  2.1410us  1.1240us  774.81us  acc_enter_data@layers.c:71
-                    0.05%  6.6526ms      3600  1.8470us  1.0450us  22.348us  acc_exit_data@layers.c:71
-                    0.05%  6.1234ms      3600  1.7000us  1.0430us  46.456us  acc_exit_data@layers.c:51
-                    0.00%  183.09us         1  183.09us  183.09us  183.09us  acc_device_init
+ GPU activities:   80.19%  4.03290s      3600  1.1202ms  333.34us  3.6756ms  _8layers_c_conv_forward_80_gpu
+                   19.80%  995.89ms      3600  276.64us  57.599us  783.39us  _8layers_c_pad_input_60_gpu
+                    0.01%  488.19us         3  162.73us  1.6950us  329.15us  [CUDA memset]
+      API calls:   95.24%  5.06005s     14400  351.39us  1.0080us  3.6737ms  cuStreamSynchronize
+                    3.14%  166.64ms         1  166.64ms  166.64ms  166.64ms  cuDevicePrimaryCtxRetain
+                    0.93%  49.453ms      7200  6.8680us  3.5520us  797.48us  cuLaunchKernel
+                    0.39%  20.615ms         1  20.615ms  20.615ms  20.615ms  cuMemAllocManaged
+                    0.12%  6.1535ms     14400     427ns     187ns  18.283us  cuOccupancyMaxActiveBlocksPerMultiprocessor
+                    0.11%  5.8307ms         1  5.8307ms  5.8307ms  5.8307ms  cuMemAllocHost
+                    0.04%  2.0469ms      7209     283ns     119ns  13.588us  cuDeviceGetAttribute
+                    0.02%  1.2147ms      1208  1.0050us     357ns  28.699us  cuPointerGetAttributes
+                    0.01%  574.96us         3  191.65us  9.7470us  386.65us  cuMemsetD8
+                    0.01%  425.80us         1  425.80us  425.80us  425.80us  cuModuleLoadDataEx
+                    0.00%  134.90us         1  134.90us  134.90us  134.90us  cuMemAlloc
+                    0.00%  15.159us         2  7.5790us     651ns  14.508us  cuModuleGetFunction
+                    0.00%  9.2260us         1  9.2260us  9.2260us  9.2260us  cuDeviceGetPCIBusId
+                    0.00%  2.7500us         3     916ns     224ns  1.5940us  cuCtxSetCurrent
+                    0.00%  1.4020us         3     467ns     137ns  1.0780us  cuDeviceGetCount
+                    0.00%  1.3510us         2     675ns     393ns     958ns  cuDeviceTotalMem
+                    0.00%     825ns         3     275ns     131ns     487ns  cuDriverGetVersion
+                    0.00%     546ns         2     273ns     123ns     423ns  cuDeviceGet
+                    0.00%     413ns         1     413ns     413ns     413ns  cuCtxGetCurrent
+                    0.00%     289ns         1     289ns     289ns     289ns  cuDeviceComputeCapability
+ OpenACC (excl):   77.88%  4.05840s      7200  563.67us  1.6060us  3.6766ms  acc_wait@layers.c:80
+                   19.61%  1.02168s      7200  141.90us  1.9140us  1.4865ms  acc_wait@layers.c:60
+                    0.67%  34.721ms      3600  9.6440us  5.7940us  799.19us  acc_enqueue_launch@layers.c:60 (_8layers_c_pad_input_60_gpu)
+                    0.53%  27.615ms      3600  7.6700us  4.4860us  790.32us  acc_enqueue_launch@layers.c:80 (_8layers_c_conv_forward_80_gpu)
+                    0.33%  17.189ms      3600  4.7740us  2.7330us  793.06us  acc_compute_construct@layers.c:60
+                    0.30%  15.638ms      3600  4.3430us  2.3750us  811.45us  acc_compute_construct@layers.c:80
+                    0.27%  14.234ms      3600  3.9530us  1.9170us  100.50us  acc_enter_data@layers.c:60
+                    0.14%  7.3292ms      3600  2.0350us  1.1510us  18.505us  acc_enter_data@layers.c:80
+                    0.14%  7.0746ms      3600  1.9650us     969ns  798.10us  acc_exit_data@layers.c:60
+                    0.13%  6.5648ms      3600  1.8230us     942ns  19.837us  acc_exit_data@layers.c:80
+                    0.01%  524.29us         1  524.29us  524.29us  524.29us  acc_device_init
 
-==1184684== Unified Memory profiling result:
+==1668494== Unified Memory profiling result:
 Device "Tesla V100-PCIE-32GB (0)"
    Count  Avg Size  Min Size  Max Size  Total Size  Total Time  Name
-   18159  17.752KB  4.0000KB  0.9961MB  314.8047MB  66.49012ms  Host To Device
-   24571  12.528KB  4.0000KB  448.00KB  300.6211MB  48.51067ms  Device To Host
-    7274         -         -         -           -   1.564786s  Gpu page fault groups
-    3241  4.0000KB  4.0000KB  4.0000KB  12.66016MB           -  Memory thrashes
-Total CPU Page faults: 16402
-Total CPU thrashes: 3241
+   15552  16.178KB  4.0000KB  0.9961MB  245.7109MB  53.10339ms  Host To Device
+   22891  10.357KB  4.0000KB  448.00KB  231.5391MB  41.96643ms  Device To Host
+    8166         -         -         -           -   1.425459s  Gpu page fault groups
+      48         -         -         -           -  12.58382ms  Page throttles
+    4006  4.0000KB  4.0000KB  4.0000KB  15.64844MB           -  Memory thrashes
+       8  4.0000KB  4.0000KB  4.0000KB  32.00000KB           -  Remote mapping from device
+Total CPU Page faults: 15929
+Total CPU thrashes: 4006
+Total CPU throttles: 34
+Total remote mappings to CPU: 8
+
+```
+
+#### 50k images
+
+```
+$ ./cnn-cifar10
+Parallel (pad) Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.543385 seconds
+Create Network time:0.001617 seconds
+Load Network Parameters time:0.011314 seconds
+Create Ouputs time:0.000627 seconds
+
+Net Forward total time:239.967919 seconds
+    Time for conv1: 93.458176 seconds
+    Time for relu1: 12.831631 seconds
+    Time for pool1: 3.626592 seconds
+    Time for conv2: 70.340130 seconds
+    Time for relu2: 10.607480 seconds
+    Time for pool2: 2.829303 seconds
+    Time for conv3: 33.426542 seconds
+    Time for relu3: 6.589558 seconds
+    Time for pool3: 1.100692 seconds
+    Time for fc: 5.127136 seconds
+    Time for softmax: 0.013117 seconds
+
+  Conv: 197.224848 seconds
+  ReLU: 30.028670 seconds
+  Pool: 7.556587 seconds
+  FC:   5.127136 seconds
+  Softmax: 0.013117 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.000695 seconds
+Free memory time:0.021840 seconds
+Total time:240.547397 seconds
+END!
 ```
