--- a/Notes/6.7-Paralle-Data.md
+++ b/Notes/6.7-Paralle-Data.md
@@ -199,6 +199,47 @@ Free memory time:0.001369 seconds
 Total time:5.900793 seconds
 END!
 ```
+### 50k images
+
+```
+$ ./cnn-cifar10 
+Parallel (if) Code
+CNN for 50000 images
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.745508 seconds
+Create Network time:0.220606 seconds
+Load Network Parameters time:0.008402 seconds
+Create Ouputs time:0.000339 seconds
+
+Net Forward total time:236.735320 seconds
+    Time for conv1: 113.976139 seconds
+    Time for relu1: 0.572837 seconds
+    Time for pool1: 2.169167 seconds
+    Time for conv2: 90.407303 seconds
+    Time for relu2: 0.183733 seconds
+    Time for pool2: 0.692584 seconds
+    Time for conv3: 28.242542 seconds
+    Time for relu3: 0.046555 seconds
+    Time for pool3: 0.176510 seconds
+    Time for fc: 0.232567 seconds
+    Time for softmax: 0.017279 seconds
+
+  Conv: 232.625984 seconds
+  ReLU: 0.803125 seconds
+  Pool: 3.038261 seconds
+  FC:   0.232567 seconds
+  Softmax: 0.017279 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.000748 seconds
+Free memory time:0.053699 seconds
+Total time:237.764622 seconds
+END!
+```
 ---
 
 ## Pad
